# SibdevTask

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/core/: settings.py  urls.py
src/customers/: models.py  serializers.py  services.py  urls.py  views.py
src/customers/migrations/: 0001_initial.py
src/deals/: apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
src/deals/migrations/: 0001_initial.py
src/gems/: models.py
src/gems/migrations/: 0001_initial.py
